# Simple-Chat-Application

./: .gitignore  COMPARISON.md  README.md
go/: chat-app  go.mod  main.go
go/handlers/: chat.go  storage.go
go/models/: models.go
go/utils/: utils.go
rust/: Cargo.toml
rust/src/: handlers.rs  main.rs  models.rs  storage.rs  utils.rs
