[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
chrono = { version = "0.4.35", features = ["serde"] }
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
async-trait = "0.1.77"
